# pepedpid

./: Cargo.toml  LICENSE  README.md  pepedpid.pyi  pyproject.toml
.github/workflows/: release.yml
src/: dpid_core.rs  lib.rs  matlab_cubic_core.rs
