[package]
name = "pepedpid"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pepedpid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py310", "extension-module"] }
ndarray = "0.17.2"
numpy = "0.28.0"

